# tsinghua-cloud-downloader

./: README.md
.github/workflows/: build-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
